andrew-mccall/themes/somrat/assets/css/custom.css
@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

@keyframes spinIn {
    from {
        transform: rotateX(0deg) rotateY(-1080deg) rotateZ(0deg);
        -webkit-transform: rotateX(0deg) rotateY(-1080deg) rotateZ(0deg);
        -moz-transform: rotateX(0deg) rotateY(-1080deg) rotateZ(0deg);
        opacity: 0;
    }

    to {
        transform: rotate(0);
        -webkit-transform: rotate(0);
        -moz-transform: rotate(0);
        opacity: 1;
    }
}

html,
body {
    overflow-x: hidden;
}

.mobile-menu-img {
    max-width: 200px;
}

header.city-header {
    display: grid;
    place-items: center;
    min-height: 100vh;
}

header.city-header h1,
header.city-header h2 {
    color: #fff;
    opacity: 0;
    text-transform: uppercase;
}

header.city-header section ul {
    color: #fff;
    font-size: 1.5em;
    list-style: none;
    max-width: 60ch;
}

header.city-header section ul li {
    opacity: 0;
}

section.local-description img {
    object-fit: cover;
}

.content > p > img {
    max-width: 100% !important;
    width: auto;
}

.perspective .card p {
    font-size: 1.2rem;
}

.#rc-anchor-alert {
    display: none !important;
}


@media screen and (min-width: 1200px) {
    .perspective {
        background: transparent; 
        transform-style: preserve-3d;
        perspective: 900px;
    }
    
    .perspective .card {
        animation: spinIn 250ms ease 1s forwards;
        box-shadow: 2px 2px 20px -10px rgba(0,0,0, 0.5);
        opacity: 0;
        transition: all 250ms ease;
        -webkit-transition: all 250ms ease;
        -moz-transition: all 250ms ease;
    }
    
    .perspective:hover .card {
        transform: rotate(0);
        -webkit-transform: rotate(0);
        -moz-transform: rotate(0)
    }
}

